Station Automatic Update

--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
                 <div class="col col-sm-3 col-xs-12">
                   <h5 class="title">SriCity AQMS</h5>
                   <label for="station">Station:</label>
-                  <select name="station" id="station">
+                  <select name="station" id="station" onchange="changeStation()">
                     <option value="s1">Station 1</option>
                     <option value="s2">Station 2</option>
                   </select>
@@ -217,6 +217,11 @@
         </div>
       </div>
     </div>
+    <script>
+      
+
+}
+      </script>
     <script src="/js/socket.io.js"></script>
     <script src="/js/sockets.js"></script>
   </body>
